2012-12-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* semi-setup.el: Remove settings for mime-view-application/pgp
	function.  SEMI-EPG does not have this funciton.

2012-12-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el: Require mmgeneric.el in compiling.
	(mime-preview-application/pgp-encrypted): New function. Imported
	and modified from Wanderlust.

	* semi-setup.el: Add setting for
	mime-preview-application/pgp-encrypted.

2012-12-21  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-shr.el (mime-shr-blocked-images): Change its customization
	gorup to mime-view.

2012-12-19  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-multipart-show-all-children): New
	customizable variable.
	(mime-display-multipart/related): Refer to it.

	* mime-pgp.el (mime-display-multipart/pgp-encrypted): Likewise.

2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-pgp-decrypt-when-preview): New customizable
	variable.
	(mime-display-multipart/pgp-encrypted): New function.

	* semi-setup.el: Define autoload and mime-preview-codition's
	settings for mime-display-multipart/pgp-encrypted.

2012-12-18  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el (mime-edit-encrypt-pgp-nonmime): New function.

2012-10-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-edit.el: Use mapc instead of mapcar for side effect.
	Assume emacs-major-version is greater than 18.

2012-10-06  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-pgp.el (mime-verify-application/*-signature)
	(mime-decrypt-application/pgp-encrypted): Use epa-display-info
	instead of epa-display-verify-result

	* mime-image.el (mime-image-normalize-xbm-buffer): Use
	string-to-number instead of string-to-int.

	* mime-shr.el: Load shr.el at compile time.

2012-10-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-epg.el: Renamed to mime-pgp.el.

	* mime-pgp.el: Renamed from mime-epg.el.

	* SEMI-ELS: Likewise.

	* semi-setup.el: Likewise.

2012-10-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
