@@ -1,3 +1,11 @@
+2012-12-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* semi-def.el (mime-add-condition): Define autoload for method and
+	body-presentation-method's parameter.
+
+	* semi-setup.el: Use mime-add-condtion for preview functions that
+	require autoload.
+
 2012-12-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* semi-setup.el: Remove settings for mime-view-application/pgp
